--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "next": "14.1.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "clsx": "2.1.0"
   },
   "devDependencies": {
     "@mikecodeur/course-app-cli": "1.0.8",
